# big-shoes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
spec/: big_shoes.spec  main.py
src/big_shoes/: __init__.py  constants.py  formation_extrapolator.py  formation_extrapolator_new.py  formation_list_new.py  formation_type_list.py  hook.py  main_window.py  stepgraph.py  stepgraph_new.py  util.py  watch_window.py
src/big_shoes/gui/: main.py
